// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New ready to merge state component renders permission text if canMerge (false) is false 1`] = `
<div
  class="media mr-widget-body"
>
  <status-icon-stub
    status="success"
  />
  <p
    class="gl-font-weight-bold gl-mb-0! gl-mt-1 gl-text-gray-900! media-body"
  >
    Ready to merge by members who can write to the target branch.
  </p>
</div>
`;

exports[`New ready to merge state component renders permission text if canMerge (true) is false 1`] = `
<div
  class="media mr-widget-body"
>
  <status-icon-stub
    status="success"
  />
  <p
    class="gl-font-weight-bold gl-mb-0! gl-mt-1 gl-text-gray-900! media-body"
  >
    Ready to merge!
  </p>
</div>
`;
